# 3DAttraction

./: .gitignore  CMakeLists.txt  README.md  layer.md  original_main.cpp  start_game.bat  start_game.sh
.cursor/rules/: a.mdc
.github/workflows/: build.yml  win-build.yml
assets/: Info.plist
assets/config/: leaderboard_config.json  ui_config.json
assets/replays/: stage1_best.json  stage2_best.json
assets/save/: save_data.json
assets/stages/: stage1.json  stage2.json  stage3.json  stage4.json  stage5.json  stage_selection.json  tutorial.json
backend/: .gitignore  MIGRATION_GUIDE.md  README.md  README_POSTGRES.md  README_RENDER.md  leaderboard.db  package-lock.json  package.json  render.yaml  server.js  server_postgres.js
src/app/: camera_system.h  game_app.cpp  game_app.h  game_constants.h  game_loop.cpp  game_loop.h  game_renderer.cpp  game_renderer.h  game_updater.cpp  game_updater.h  input_handler.cpp  input_handler.h  main.cpp  simple_main.cpp  simple_main_original.cpp  tutorial_manager.cpp  tutorial_manager.h
src/core/: error_handler.h  log.cpp  log.h  math_utils.cpp  math_utils.h  time.cpp  time.h
src/core/constants/: color_constants.h  debug_config.h  game_constants.h  input_constants.h  physics_constants.h  rendering_constants.h  stage_constants.h  window_constants.h
src/core/types/: platform_types.h
src/core/utils/: input_utils.h  physics_utils.cpp  physics_utils.h  resource_path.h  stage_utils.cpp  stage_utils.h  ui_config_manager.cpp  ui_config_manager.h
src/game/: camera_state.h  camera_system.h  cannon_system.cpp  cannon_system.h  game_constants.h  game_progress_state.h  game_state.cpp  game_state.h  gravity_system.cpp  gravity_system.h  item_state.h  json_stage_loader.cpp  json_stage_loader.h  multiplayer_manager.cpp  multiplayer_manager.h  multiplayer_state.h  online_leaderboard_manager.cpp  online_leaderboard_manager.h  platform_system.cpp  platform_system.h  platform_types.h  player_state.h  replay_manager.cpp  replay_manager.h  replay_state.h  save_manager.cpp  save_manager.h  skill_state.h  stage_editor.cpp  stage_editor.h  stage_generator.cpp  stage_generator.h  stage_manager.cpp  stage_manager.h  switch_system.cpp  switch_system.h  ui_state.h
src/gfx/: background_renderer.cpp  background_renderer.h  bitmap_font.cpp  bitmap_font.h  camera_system.h  game_state_ui_renderer.cpp  game_state_ui_renderer.h  minimap_renderer.cpp  minimap_renderer.h  opengl_renderer.cpp  opengl_renderer.h  renderer_3d.cpp  renderer_3d.h  texture_manager.cpp  texture_manager.h  ui_renderer.cpp  ui_renderer.h  vulkan_device.cpp  vulkan_device.h  vulkan_renderer.cpp  vulkan_renderer.h
src/io/: audio_manager.cpp  audio_manager.h  input_system.cpp  input_system.h  network_manager.cpp  network_manager.h
src/physics/: physics_system.cpp  physics_system.h
